# deep-signal

./: .env.example  ARCHITECTURE.md  CONTRIBUTING.md  README.md  create_pdf.py  generate_resume.py  main.py  pyproject.toml  requirements.txt  setup.py
docs/: QUICKSTART.md  Resume Analysis.md  SCORING_GUIDE.md
docs/MVP1/: Epics and Stories.md
examples/: basic_usage.py
scripts/: test_parser_agent.py
src/deep_signal/: __init__.py  orchestrator.py  workflow.py
src/deep_signal/agents/: __init__.py  agent_a_resume.py  agent_b_github.py  agent_c_synthesis.py  analyzer_agent.py  github_analysis_agent.py  matcher_agent.py  parser_agent.py  skill_decay_analysis_agent.py  synthesis_agent.py
src/deep_signal/api/: main.py
src/deep_signal/models/: __init__.py  candidate.py  report.py  state.py
src/deep_signal/services/: pdf_parser.py
src/deep_signal/state/: __init__.py  graph_state.py
src/deep_signal/utils/: __init__.py  llm.py
tests/: __init__.py  test_agent_a.py  test_models.py  test_orchestrator.py  test_workflow.py  verify_upload.py
