[project]
name = "deep-signal"
version = "0.1.0"
description = "Agentic AI enabled job portal or talent hunt platform"
authors = [
    {name = "Anand Muley", email = "anandbmuley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "typing-extensions>=4.7.0",
    "PyGithub>=2.1.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "nltk>=3.8.1",
    "pypdf>=3.0.0",
    "langchain-community>=0.0.10",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
